name cutoff change fix

--- a/css/layout.css
+++ b/css/layout.css
@@ -61,5 +61,5 @@
 }
 
 .flex-basis-saying-text {
-  width: 271.87px;
+  width: 264.02px;
 }
